# name: TestQuery.test_event_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(events.team_id, 68), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_event_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(events.team_id, 68), equals(replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''), 'test_val3'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_event_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(events.team_id, 68), ilike(replaceRegexpAll(JSONExtractRaw(events.properties, 'path'), '^"|"$', ''), '%/%'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_event_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key,
         'a%sd',
         concat(events.event, ' ', events.mat_key)
  FROM events
  WHERE and(equals(events.team_id, 69), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_event_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key,
         'a%sd',
         concat(events.event, ' ', events.mat_key)
  FROM events
  WHERE and(equals(events.team_id, 69), equals(events.mat_key, 'test_val3'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_event_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key,
         'a%sd',
         concat(events.event, ' ', events.mat_key)
  FROM events
  WHERE and(equals(events.team_id, 69), ilike(events.mat_path, '%/%'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_full_hogql_query
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', '')
  FROM events
  WHERE equals(events.team_id, 70)
  ORDER BY toTimezone(events.timestamp, 'UTC') ASC
  LIMIT 100 SETTINGS readonly=1,
                     max_execution_time=60
  '
---
# name: TestQuery.test_full_hogql_query_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key
  FROM events
  WHERE equals(events.team_id, 71)
  ORDER BY toTimezone(events.timestamp, 'UTC') ASC
  LIMIT 100 SETTINGS readonly=1,
                     max_execution_time=60
  '
---
# name: TestQuery.test_hogql_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(events.team_id, 72), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_hogql_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(events.team_id, 72), equals('a%sd', 'foo'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_hogql_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(events.team_id, 72), equals('a%sd', 'a%sd'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_hogql_property_filter.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(events.team_id, 72), equals(replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''), 'test_val2'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_hogql_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key,
         'a%sd',
         concat(events.event, ' ', events.mat_key)
  FROM events
  WHERE and(equals(events.team_id, 73), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key,
         'a%sd',
         concat(events.event, ' ', events.mat_key)
  FROM events
  WHERE and(equals(events.team_id, 73), equals('a%sd', 'foo'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key,
         'a%sd',
         concat(events.event, ' ', events.mat_key)
  FROM events
  WHERE and(equals(events.team_id, 73), equals('a%sd', 'a%sd'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key,
         'a%sd',
         concat(events.event, ' ', events.mat_key)
  FROM events
  WHERE and(equals(events.team_id, 73), equals(events.mat_key, 'test_val2'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_person_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 77)
     GROUP BY person_distinct_id2.distinct_id
     HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0)) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id)
  INNER JOIN
    (SELECT argMax(replaceRegexpAll(JSONExtractRaw(person.properties, 'email'), '^"|"$', ''), person.version) AS properties___email,
            person.id
     FROM person
     WHERE equals(person.team_id, 77)
     GROUP BY person.id
     HAVING equals(argMax(person.is_deleted, person.version), 0)) AS events__pdi__person ON equals(events__pdi.person_id, events__pdi__person.id)
  WHERE and(equals(events.team_id, 77), equals(events__pdi__person.properties___email, 'tom@posthog.com'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_person_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.mat_key,
         'a%sd',
         concat(events.event, ' ', events.mat_key)
  FROM events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 78)
     GROUP BY person_distinct_id2.distinct_id
     HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0)) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id)
  INNER JOIN
    (SELECT argMax(person.pmat_email, person.version) AS properties___email,
            person.id
     FROM person
     WHERE equals(person.team_id, 78)
     GROUP BY person.id
     HAVING equals(argMax(person.is_deleted, person.version), 0)) AS events__pdi__person ON equals(events__pdi.person_id, events__pdi__person.id)
  WHERE and(equals(events.team_id, 78), equals(events__pdi__person.properties___email, 'tom@posthog.com'), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_property_filter_aggregations
  '
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         count()
  FROM events
  WHERE and(equals(events.team_id, 79), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  GROUP BY replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', '')
  ORDER BY count() DESC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_property_filter_aggregations.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         count()
  FROM events
  WHERE and(equals(events.team_id, 79), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  GROUP BY replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', '')
  HAVING and(greater(count(), 1))
  ORDER BY count() DESC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_property_filter_aggregations_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.mat_key,
         count()
  FROM events
  WHERE and(equals(events.team_id, 80), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  GROUP BY events.mat_key
  ORDER BY count() DESC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_property_filter_aggregations_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.mat_key,
         count()
  FROM events
  WHERE and(equals(events.team_id, 80), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  GROUP BY events.mat_key
  HAVING and(greater(count(), 1))
  ORDER BY count() DESC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_select_event_person
  '
  /* user_id:0 request:_snapshot_ */
  SELECT events.event,
         events.distinct_id,
         events.distinct_id
  FROM events
  WHERE and(equals(events.team_id, 81), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_select_hogql_expressions
  '
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''),
         events.event,
         events.distinct_id,
         concat(events.event, ' ', replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(events.team_id, 82), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', '') ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_select_hogql_expressions.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(events.uuid, events.event, events.properties, toTimezone(events.timestamp, 'UTC'), events.team_id, events.distinct_id, events.elements_chain, toTimezone(events.created_at, 'UTC')),
         events.event
  FROM events
  WHERE and(equals(events.team_id, 82), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  ORDER BY tuple(events.uuid, events.event, events.properties, toTimezone(events.timestamp, 'UTC'), events.team_id, events.distinct_id, events.elements_chain, toTimezone(events.created_at, 'UTC')) ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_select_hogql_expressions.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(),
         events.event
  FROM events
  WHERE and(equals(events.team_id, 82), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  GROUP BY events.event
  ORDER BY count() DESC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
# name: TestQuery.test_select_hogql_expressions.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(),
         events.event
  FROM events
  WHERE and(equals(events.team_id, 82), or(equals(events.event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(events.properties, 'key'), '^"|"$', ''), '%val2')), less(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-10 12:14:05', 'UTC')), greater(toTimezone(events.timestamp, 'UTC'), toDateTime('2020-01-09 12:00:00', 'UTC')))
  GROUP BY events.event
  ORDER BY count() DESC, events.event ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=1,
                    max_execution_time=60
  '
---
